test/testzillians-compiler/ThorScriptCompilerStaticTest/error/4_parameter/qwe/qwe/PACKAGE_NAME_COLLIDE_PARENT.t
/* NOTE: should attach to "package" node, but corresponding keyword no longer available
   @static_test { expect_message={ level="LEVEL_ERROR", id="PACKAGE_NAME_COLLIDE_PARENT", parameters={ package_id="QWE" } } }
*/
function f():void
{
}
